gcc/testsuite/rust/rustc/ui/error-codes/E0004-2.rs
fn main() {
    let x = Some(1);

    match x { } // { dg-error ".E0004." "" { target *-*-* } }
}

